--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "embla-carousel-react": "^8.6.0",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "qr-scanner": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
