--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "qr-scanner": "^1.4.2",
+    "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
