--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
